Modify authorization retrival for some routes
